--- a/jaxb-ri/bundles/xjc/pom.xml
+++ b/jaxb-ri/bundles/xjc/pom.xml
@@ -170,6 +170,16 @@ holder.
                         </goals>
                         <configuration>
                             <artifactSet>
+                                <includes>
+                                    <include>org.glassfish.jaxb:jaxb-xjc</include>
+                                    <include>com.sun.codemodel:codemodel</include>
+                                    <include>com.sun.istack:istack-commons-tools</include>
+                                    <include>com.sun.xml.dtd-parser:dtd-parser</include>
+                                    <include>com.sun.xsom:xsom</include>
+                                    <include>org.kohsuke.rngom:rngom</include>
+                                    <include>relaxngDatatype:relaxngDatatype</include>
+                                </includes>
+<!--
                                 <excludes>
                                     <exclude>org.glassfish.jaxb:jaxb-core</exclude>
                                     <exclude>javax.xml.bind:jaxb-api</exclude>
@@ -180,6 +190,7 @@ holder.
                                     <exclude>org.apache.ant:ant-launcher</exclude>
                                     <exclude>com.sun.org.apache.xml.internal:resolver</exclude>
                                 </excludes>
+-->
                             </artifactSet>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
