--- a/jaxb-ri/bundles/jxc/pom.xml
+++ b/jaxb-ri/bundles/jxc/pom.xml
@@ -127,6 +127,10 @@ holder.
                         </goals>
                         <configuration>
                             <artifactSet>
+                                <includes>
+                                    <include>org.glassfish.jaxb:jaxb-jxc</include>
+                                </includes>
+<!--
                                 <excludes>
                                     <exclude>org.glassfish.jaxb:jaxb-core</exclude>
                                     <exclude>org.glassfish.jaxb:jaxb-xjc</exclude>
@@ -150,6 +154,7 @@ holder.
                                     <exclude>org.jvnet.staxex:stax-ex</exclude>
                                     <exclude>javax.activation:activation</exclude>
                                 </excludes>
+-->
                             </artifactSet>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
