--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -430,11 +430,19 @@ holder.
                 <plugin>
                     <groupId>org.glassfish.build</groupId>
                     <artifactId>gfnexus-maven-plugin</artifactId>
-                    <version>0.11</version>
+                    <version>0.12</version>
                     <configuration>
-                        <referenceCoordinates>org.glassfish.main.distributions:nucleus-new:${project.version}:zip</referenceCoordinates>
-                        <stagingProfile>org.glassfish</stagingProfile>
-                        <promotionProfile>glassfish-weekly-build</promotionProfile>
+                        <stagingRepos>
+                            <stagingRepo>
+                                <ref>org.glassfish.jaxb:jaxb-core:${project.version}:jar</ref>
+                                <profile>org.glassfish.jaxb</profile>
+                            </stagingRepo>
+                            <stagingRepo>
+                                <ref>com.sun.xml.bind:jaxb-core:${project.version}:jar</ref>
+                                <profile>javax.xml.bind</profile>
+                            </stagingRepo>
+                        </stagingRepos>
+                        <promotionProfile>metro</promotionProfile>
                     </configuration>
                 </plugin>
             </plugins>
