forgot to update version to use property

--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -382,7 +382,7 @@ holder.
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
-                    <version>2.5.2</version>
+                    <version>${findbugs.version}</version>
                     <configuration>
                         <skip>${findbugs.skip}</skip>
                         <threshold>${findbugs.threshold}</threshold>
