migrate rngom dependency to the source tree

--- a/jaxb-ri/bundles/jxc/pom.xml
+++ b/jaxb-ri/bundles/jxc/pom.xml
@@ -141,6 +141,7 @@ holder.
 
                                     <exclude>com.sun.codemodel:codemodel</exclude>
                                     <exclude>org.kohsuke.rngom:rngom</exclude>
+                                    <exclude>com.sun.xml.bind.external:rngom</exclude>
                                     <exclude>com.sun.xml.dtd-parser:dtd-parser</exclude>
                                     <exclude>com.sun.istack:istack-commons-tools</exclude>
                                     <exclude>org.apache.ant:ant</exclude>
