--- a/jaxb-ri/xjc/pom.xml
+++ b/jaxb-ri/xjc/pom.xml
@@ -80,8 +80,9 @@ holder.
             <artifactId>codemodel</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.kohsuke.rngom</groupId>
+            <groupId>com.sun.xml.bind.external</groupId>
             <artifactId>rngom</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.dtd-parser</groupId>
