migrate working tests, fix compilation

--- a/jaxb-ri/external/rngom/pom.xml
+++ b/jaxb-ri/external/rngom/pom.xml
@@ -85,6 +85,19 @@
             <groupId>relaxngDatatype</groupId>
             <artifactId>relaxngDatatype</artifactId>
         </dependency>
+        
+        <!-- Test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>xmlunit</groupId>
+            <artifactId>xmlunit</artifactId>
+            <scope>test</scope>
+        </dependency>
+                        
     </dependencies>
 </project>
 
