--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -156,15 +156,22 @@ holder.
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>args4j</groupId>
+                <artifactId>args4j</artifactId>
+                <version>${args4j.version}</version>
+            </dependency>
+            <!-- Test -->
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>args4j</groupId>
-                <artifactId>args4j</artifactId>
-                <version>${args4j.version}</version>
+                <groupId>xmlunit</groupId>
+                <artifactId>xmlunit</artifactId>
+                <version>1.3</version>
+                <scope>test</scope>
             </dependency>
             <!-- JDK dependencies -->
             <dependency>
