--- a/jaxb-ri/external/rngom/pom.xml
+++ b/jaxb-ri/external/rngom/pom.xml
@@ -61,7 +61,7 @@
     </description>
 
     <properties>
-        <!--findbugs.exclude>${project.basedir}/exclude-jxc.xml</findbugs.exclude-->
+        <findbugs.exclude>${project.basedir}/exclude-rngom.xml</findbugs.exclude>
     </properties>
 
     <build>
