--- a/jaxb-ri/boms/bom/pom.xml
+++ b/jaxb-ri/boms/bom/pom.xml
@@ -61,10 +61,10 @@
     <description>JAXB Bill of Materials (BOM)</description>
 
     <properties>
-        <jaxb-api.version>2.2.10</jaxb-api.version>
-        <istack.version>2.18</istack.version>
+        <jaxb-api.version>2.2.11</jaxb-api.version>
+        <istack.version>2.19</istack.version>
         <fastinfoset.version>1.2.13</fastinfoset.version>
-        <stax-ex.version>1.7.1</stax-ex.version>
+        <stax-ex.version>1.7.1-130213.2301</stax-ex.version>
     </properties>
 
     <dependencyManagement>
