make JDK deps required, map jaxb-extra-osgi exports by version, remove dep on com.sun.nio

--- a/jaxb-ri/bundles/osgi/extra/pom.xml
+++ b/jaxb-ri/bundles/osgi/extra/pom.xml
@@ -111,6 +111,10 @@ holder.
                                     org.iso_relax.*;version=${isorelax.version}
                                 </Export-Package>
                                 <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                                <Import-Package>
+                                    org.relaxng.datatype;version=${relaxngDatatype.version},
+                                    org.relaxng.datatype.*;version=${relaxngDatatype.version}
+                                </Import-Package>
                             </instructions>
                         </configuration>
                     </execution>
