--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -154,51 +154,50 @@ holder.
                                     javax.xml.bind.annotation.adapters;version=${jaxb-api.version},
                                     javax.xml.bind.attachment;version=${jaxb-api.version},
                                     javax.xml.bind.helpers;version=${jaxb-api.version},
-                                    com.sun.msv.grammar;resolution:=optional,
-                                    com.sun.msv.grammar.trex;resolution:=optional,
-                                    com.sun.msv.grammar.util;resolution:=optional,
-                                    com.sun.msv.util;resolution:=optional,
-                                    com.sun.msv.verifier;resolution:=optional,
-                                    com.sun.msv.verifier.regexp;resolution:=optional,
+                                    javax.activation,
+                                    javax.annotation.processing,
+                                    javax.imageio,
+                                    javax.imageio.stream,
+                                    javax.lang.model,
+                                    javax.lang.model.element,
+                                    javax.lang.model.type,
+                                    javax.lang.model.util,
+                                    javax.swing,
+                                    javax.swing.border,
+                                    javax.swing.tree,
+                                    javax.tools,
+                                    javax.xml.datatype,
+                                    javax.xml.namespace,
+                                    javax.xml.parsers,
+                                    javax.xml.stream,
+                                    javax.xml.stream.events,
+                                    javax.xml.stream.util,
+                                    javax.xml.transform,
+                                    javax.xml.transform.dom,
+                                    javax.xml.transform.sax,
+                                    javax.xml.transform.stream,
+                                    javax.xml.validation,
+                                    javax.xml.xpath,
+                                    org.w3c.dom,
+                                    org.w3c.dom.ls,
+                                    org.xml.sax,
+                                    org.xml.sax.ext,
+                                    org.xml.sax.helpers,
                                     com.sun.org.apache.xml.internal.resolver;resolution:=optional,
                                     com.sun.org.apache.xml.internal.resolver.tools;resolution:=optional,
-                                    com.sun.source.tree;resolution:=optional,
-                                    com.sun.source.util;resolution:=optional,
-                                    javax.activation;resolution:=optional,
-                                    javax.annotation.processing;resolution:=optional,
-                                    javax.imageio;resolution:=optional,
-                                    javax.imageio.stream;resolution:=optional,
-                                    javax.lang.model;resolution:=optional,
-                                    javax.lang.model.element;resolution:=optional,
-                                    javax.lang.model.type;resolution:=optional,
-                                    javax.lang.model.util;resolution:=optional,
-                                    javax.swing;resolution:=optional,
-                                    javax.swing.border;resolution:=optional,
-                                    javax.swing.tree;resolution:=optional,
-                                    javax.tools;resolution:=optional,
-                                    javax.xml.datatype;resolution:=optional,
-                                    javax.xml.namespace;resolution:=optional,
-                                    javax.xml.parsers;resolution:=optional,
-                                    javax.xml.stream;resolution:=optional,
-                                    javax.xml.stream.events;resolution:=optional,
-                                    javax.xml.stream.util;resolution:=optional,
-                                    javax.xml.transform;resolution:=optional,
-                                    javax.xml.transform.dom;resolution:=optional,
-                                    javax.xml.transform.sax;resolution:=optional,
-                                    javax.xml.transform.stream;resolution:=optional,
-                                    javax.xml.validation;resolution:=optional,
-                                    javax.xml.xpath;resolution:=optional,
+                                    com.sun.source.tree,
+                                    com.sun.source.util,
                                     org.apache.tools.ant;resolution:=optional,
                                     org.apache.tools.ant.taskdefs;resolution:=optional,
                                     org.apache.tools.ant.taskdefs.compilers;resolution:=optional,
                                     org.apache.tools.ant.types;resolution:=optional,
-                                    org.iso_relax.verifier.impl;resolution:=optional,
-                                    org.w3c.dom;resolution:=optional,
-                                    org.w3c.dom.ls;resolution:=optional,
-                                    org.xml.sax;resolution:=optional,
-                                    org.xml.sax.ext;resolution:=optional,
-                                    org.xml.sax.helpers;resolution:=optional,
-                                    sun.nio.cs;resolution:=optional
+                                    com.sun.msv.grammar;version=${msv.version};resolution:=optional,
+                                    com.sun.msv.grammar.trex;version=${msv.version};resolution:=optional,
+                                    com.sun.msv.grammar.util;version=${msv.version};resolution:=optional,
+                                    com.sun.msv.util;version=${msv.version};resolution:=optional,
+                                    com.sun.msv.verifier;version=${msv.version};resolution:=optional,
+                                    com.sun.msv.verifier.regexp;version=${msv.version};resolution:=optional,
+                                    org.iso_relax.verifier.impl;version=${isorelax.version};resolution:=optional
                                 </Import-Package>
                             </instructions>
                         </configuration>
