--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -143,6 +143,7 @@ holder.
                                     org.jvnet.fastinfoset;version=${fastinfoset.version},
                                     org.jvnet.fastinfoset.*;version=${fastinfoset.version},
                                     org.jvnet.staxex;version=${stax-ex.version},
+                                    org.jvnet.staxex.util;version=${stax-ex.version},
                                     org.kohsuke.rngom.*;version=${jaxb.osgiVersion},
                                     org.relaxng.datatype;version=${relaxngDatatype.version},
                                     org.relaxng.datatype.*;version=${relaxngDatatype.version}
