--- a/jaxb-ri/bundles/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/pom.xml
@@ -47,7 +47,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-bundles</artifactId>
-        <version>2.2.8-b130911.1802</version>
+        <version>2.2.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>jaxb-osgi</artifactId>
