--- a/jaxb-ri/boms/bom/pom.xml
+++ b/jaxb-ri/boms/bom/pom.xml
@@ -61,7 +61,7 @@
     <description>JAXB Bill of Materials (BOM)</description>
 
     <properties>
-        <jaxb-api.version>2.2.11</jaxb-api.version>
+        <jaxb-api.version>2.2.12-b140109.1041</jaxb-api.version>
         <istack.version>2.19</istack.version>
         <fastinfoset.version>1.2.13</fastinfoset.version>
         <stax-ex.version>1.7.5</stax-ex.version>
