--- a/jaxb-ri/boms/bom/pom.xml
+++ b/jaxb-ri/boms/bom/pom.xml
@@ -54,7 +54,7 @@
 
     <groupId>org.glassfish.jaxb</groupId>
     <artifactId>jaxb-bom</artifactId>
-    <version>2.2.9-b140115.2001</version>
+    <version>2.2.9-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>JAXB BOM</name>
