--- a/jaxb-ri/bundles/jxc/pom.xml
+++ b/jaxb-ri/bundles/jxc/pom.xml
@@ -47,7 +47,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-bundles</artifactId>
-        <version>2.2.9-SNAPSHOT</version>
+        <version>2.2.9-b140118.1902</version>
     </parent>
 
     <groupId>com.sun.xml.bind</groupId>
