--- a/jaxb-ri/bundles/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/pom.xml
@@ -47,7 +47,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-bundles</artifactId>
-        <version>2.2.9-SNAPSHOT</version>
+        <version>2.2.9-b140120.1901</version>
     </parent>
 
     <artifactId>jaxb-osgi</artifactId>
