--- a/jaxb-ri/docs/pom.xml
+++ b/jaxb-ri/docs/pom.xml
@@ -49,7 +49,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-parent</artifactId>
-        <version>2.2.9-SNAPSHOT</version>
+        <version>2.2.9-b140120.1901</version>
     </parent>
 
     <artifactId>jaxb-docs-parent</artifactId>
