--- a/jaxb-ri/boms/bom-ext/pom.xml
+++ b/jaxb-ri/boms/bom-ext/pom.xml
@@ -49,7 +49,7 @@
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-bom</artifactId>
         <relativePath>../bom/pom.xml</relativePath>
-        <version>2.2.9-b140120.1901</version>
+        <version>2.2.9-SNAPSHOT</version>
     </parent>
 
     <groupId>com.sun.xml.bind</groupId>
