--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -47,7 +47,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-bom-ext</artifactId>
-        <version>2.2.9-SNAPSHOT</version>
+        <version>2.2.9-b140128.1901</version>
         <relativePath>boms/bom-ext/pom.xml</relativePath>
     </parent>
 
